--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 .App {
   text-align: center;
 }
+
+.center_table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+table, th, td {
+  border: 1px solid;
+}
