--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,71 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .center_table {
-  margin-left: auto;
-  margin-right: auto;
+    margin: auto auto 1rem;
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+    background-color: #f2f2f2;
 }
 
-table, th, td {
-  border: 1px solid;
+table,
+th,
+td {
+    border: 1px solid;
+    padding: 0.5rem;
+}
+
+form {
+    position: sticky;
+    bottom: 0;
+    background-color: white;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+form .fields {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.buttons {
+    margin: 1.5rem;
+}
+
+.buttons button {
+    border: 2px solid rgb(82, 206, 240);
+    background-color: white;
+    margin: 0.25rem;
+    border-radius: 2.5rem;
+    padding: 0.5rem;
+}
+
+.buttons button:hover {
+    background-color: rgb(82, 206, 240);
+    /* color: white; */
+}
+
+form label {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    width: 100%;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 2px solid #000;
+    outline: none;
+    font-size: medium;
 }
